UI: Ensure there is always sufficient contrast between selected commando items and the rest - fixes #1262
(integrated from master branch change 9.2.1-1331-ge138e84 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/modules/commando/skin/commando.less
+++ b/src/modules/commando/skin/commando.less
@@ -185,6 +185,7 @@
         background: @special;
         border: 0;
         margin: 0;
+        min-height: 100px;
         
         &:not(.has-results)
         {
